Some translations, bug fixes and set some links.

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,13 +31,13 @@
                                                 (2016-2017)
                                                     <br>
                                                     <br>
-                                                <b><a href="PoeticaSonora_2017_Inicio" rel="history"><u>Programa de activaciones</u></a></b><br>
+                                                <b><a href="http://poeticasonora.mx/PoeticaSonora_2017_Inicio" rel="history"><u>Programa de activaciones</u></a></b><br>
                                                 Activation Program
                                                     <br>
                                                 (2017)
                                                     <br>
                                                     <br>
-                                                <b><a href="PoeticaSonora_2016_Inicio" rel="history"><u>Programa de activaciones</u></a></b>
+                                                <b><a href="http://poeticasonora.mx/PoeticaSonora_2016_Inicio" rel="history"><u>Programa de activaciones</u></a></b>
                                                     <br>
                                                 Activation Program<a href="Inicio" rel="history">
                                                     <br>
@@ -49,18 +49,18 @@
                                           <br>
                                           <br>
                                           <br>
-                                        <a href="Proyecto" rel="history">Sobre el proyecto</a> | <a href="Participantes-PoeticaSonora" rel="history">Participantes</a> |
-                                        <a href="Instancias-que-colaboran-con-nosotros" rel="history">Instancias que colaboran con nosotros</a> |
-                                        <a href="Noticias" rel="history">Prensa</a>&nbsp;| <br>
-                                        <a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Documentación visual</a> |
-                                        <a href="Equipo" rel="history">Créditos 2016</a> | <a href="Equipo-RDA" rel="history">Créditos 2017</a> |
-                                        <a href="Contacto" rel="history">Contacto</a>&nbsp;<br>
-                                        <a href="Project" rel="history">About the project</a> | <a href="Participants" rel="history">Participants</a> |
-                                        <a href="Collaborating-Institutions" rel="history">Collaborating Institutions</a> | <a href="Press" rel="history">Press</a> |<br>
-                                        <a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Visual Documentation</a> |
-                                        <a href="Team" rel="history">Credits 2016</a> |
-                                        <a href="Equipo-RDA" rel="history">Credits 2017</a> |
-                                        <a href="Contact" rel="history">Contact</a><br><br><b>
+                                        <a href="http://poeticasonora.mx/Proyecto" rel="history">Sobre el proyecto</a> | <a href="http://poeticasonora.mx/Participantes-PoeticaSonora" rel="history">Participantes</a> |
+                                        <a href="http://poeticasonora.mx/Instancias-que-colaboran-con-nosotros" rel="history">Instancias que colaboran con nosotros</a> |
+                                        <a href="http://poeticasonora.mx/Noticias" rel="history">Prensa</a>&nbsp;| <br>
+                                        <a href="http://poeticasonora.mx/http://laboratorioextendido.dropmark.com/150515" target="_blank">Documentación visual</a> |
+                                        <a href="http://poeticasonora.mx/Equipo" rel="history">Créditos 2016</a> | <a href="http://poeticasonora.mx/Equipo-RDA" rel="history">Créditos 2017</a> |
+                                        <a href="http://poeticasonora.mx/Contacto" rel="history">Contacto</a>&nbsp;<br>
+                                        <a href="http://poeticasonora.mx/Project" rel="history">About the project</a> | <a href="http://poeticasonora.mx/Participants" rel="history">Participants</a> |
+                                        <a href="http://poeticasonora.mx/Collaborating-Institutions" rel="history">Collaborating Institutions</a> | <a href="http://poeticasonora.mx/Press" rel="history">Press</a> |<br>
+                                        <a href="http://poeticasonora.mx/http://laboratorioextendido.dropmark.com/150515" target="_blank">Visual Documentation</a> |
+                                        <a href="http://poeticasonora.mx/Team" rel="history">Credits 2016</a> |
+                                        <a href="http://poeticasonora.mx/Equipo-RDA" rel="history">Credits 2017</a> |
+                                        <a href="http://poeticasonora.mx/Contact" rel="history">Contact</a><br><br><b>
                                         <a href="http://www.twitter.com/_lleom_" class="icon-link" target="_blank"></a>
                                         <a href="https://www.facebook.com/laboratorioextendido" class="icon-link" target="_blank"></a></b><br>#PoéticaSonoraMX
                                       </small></div>
