--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -17,18 +17,18 @@
           <br>
           <br>
           <br>
-        <a href="Proyecto" rel="history">Sobre el proyecto</a> | <a href="Participantes-PoeticaSonora" rel="history">Participantes</a> |
-        <a href="Instancias-que-colaboran-con-nosotros" rel="history">Instancias que colaboran con nosotros</a> |
-        <a href="Noticias" rel="history">Prensa</a>&nbsp;| <br>
-        <a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Documentación visual</a> |
-        <a href="Equipo" rel="history">Créditos 2016</a> | <a href="Equipo-RDA" rel="history">Créditos 2017</a> |
-        <a href="Contacto" rel="history">Contacto</a>&nbsp;<br>
-        <a href="Project" rel="history">About the project</a> | <a href="Participants" rel="history">Participants</a> |
-        <a href="Collaborating-Institutions" rel="history">Collaborating Institutions</a> | <a href="Press" rel="history">Press</a> |<br>
-        <a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Visual Documentation</a> |
-        <a href="Team" rel="history">Credits 2016</a> |
-        <a href="Equipo-RDA" rel="history">Credits 2017</a> |
-        <a href="Contact" rel="history">Contact</a><br><br><b>
+        <a href="http://poeticasonora.mx/Proyecto" rel="history">Sobre el proyecto</a> | <a href="http://poeticasonora.mx/Participantes-PoeticaSonora" rel="history">Participantes</a> |
+        <a href="http://poeticasonora.mx/Instancias-que-colaboran-con-nosotros" rel="history">Instancias que colaboran con nosotros</a> |
+        <a href="http://poeticasonora.mx/Noticias" rel="history">Prensa</a>&nbsp;| <br>
+        <a href="http://poeticasonora.mx/http://laboratorioextendido.dropmark.com/150515" target="_blank">Documentación visual</a> |
+        <a href="http://poeticasonora.mx/Equipo" rel="history">Créditos 2016</a> | <a href="http://poeticasonora.mx/Equipo-RDA" rel="history">Créditos 2017</a> |
+        <a href="http://poeticasonora.mx/Contacto" rel="history">Contacto</a>&nbsp;<br>
+        <a href="http://poeticasonora.mx/Project" rel="history">About the project</a> | <a href="http://poeticasonora.mx/Participants" rel="history">Participants</a> |
+        <a href="http://poeticasonora.mx/Collaborating-Institutions" rel="history">Collaborating Institutions</a> | <a href="http://poeticasonora.mx/Press" rel="history">Press</a> |<br>
+        <a href="http://poeticasonora.mx/http://laboratorioextendido.dropmark.com/150515" target="_blank">Visual Documentation</a> |
+        <a href="http://poeticasonora.mx/Team" rel="history">Credits 2016</a> |
+        <a href="http://poeticasonora.mx/Equipo-RDA" rel="history">Credits 2017</a> |
+        <a href="http://poeticasonora.mx/Contact" rel="history">Contact</a><br><br><b>
         <a href="http://www.twitter.com/_lleom_" class="icon-link" target="_blank"></a>
         <a href="https://www.facebook.com/laboratorioextendido" class="icon-link" target="_blank"></a></b><br>#PoéticaSonoraMX
       </small></div>
