--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -11,16 +11,16 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/">Página Principal</a></li>
+            <li><a href="http://poeticasonora.mx/Proyecto">Sobre el proyecto</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% if session.logged_in %}
                   <li><a href="/dashboard">Dashboard</a></li>
                   <li><a href="/logout">Logout</a></li>
               {% else %}
-                  <li><a href="/register">Register</a></li>
-                  <li><a href="/login">Login</a></li>
+                  <li><a href="/register">Registro</a></li>
+                  <li><a href="/login">Iniciar</a></li>
               {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
