--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -8,7 +8,7 @@
                     <div class="dropdown-menu dropdown-menu-right" role="menu">
                         <div class="form-horizontal" role="form">
                           <div class="form-group">
-                            <label for="filter">Filter by</label>
+                            <label for="filter">Filtrado por</label>
                             <select name="filter-by" onclick="noPropagate(event);" id="no-click" class="form-control">
                                 <option value="0" selected>All Categories</option>
                                 <option value="1">Autor</option>
@@ -25,18 +25,18 @@
                           <div class="form-group">
                               <div class="container">
                                   <div class="row text-center">
-                                      <div class="col-xs-6">
+                                      <div class="col-sm-12 col-md-6">
                                           <label for="ano-start">Ano Comenzio</label>
                                       </div>
-                                      <div class="col-xs-6">
+                                      <div class="col-sm-12 col-md-6">
                                           <label for="an-end">Ano Finale</label>
                                       </div>
                                   </div>
                                   <div class="row">
-                                      <div class="col-xs-6">
+                                      <div class="col-sm-12 col-md-6">
                                         <input name="ano-start" class="form-control" type="text" placeholder="Ahora" />
                                       </div>
-                                      <div class="col-xs-6">
+                                      <div class="col-sm-12 col-md-6">
                                         <input name="ano-end" class="form-control" type="text"
                                                placeholder="Principio de los tiempos" />
                                       </div>
@@ -44,7 +44,7 @@
                               </div>
                           </div>
                           <div class="form-group">
-                            <label for="contains">Contains the words</label>
+                            <label for="contains">Contiene las palabras</label>
                             <input name="contains" class="form-control" type="text" />
                           </div>
                           <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
