--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -24,7 +24,7 @@
                           </div>
                           <div class="form-group">
                               <div class="container">
-                                  <div class="row text-center">
+                                  <div class="text-center">
                                       <div class="col-sm-12 col-md-6">
                                           <label for="ano-start">Ano Comenzio</label>
                                           <input name="ano-start" class="form-control" type="text" placeholder="Ahora" />
