--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -23,7 +23,7 @@
                             </select>
                           </div>
                           <div class="form-group">
-                              <div class="container">
+                              <div class="container-fluid">
                                   <div class="text-center">
                                       <div class="col-12 col-md-6">
                                           <label for="ano-start">Ano Comenzio</label>
