--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -23,13 +23,13 @@
                             </select>
                           </div>
                           <div class="form-group">
-                              <div class="container-fluid">
-                                  <div class="text-center">
-                                      <div class="col-12 col-md-6">
+                              <div class="container">
+                                  <div class="row text-center">
+                                      <div class="col-sm-12 col-md-6">
                                           <label for="ano-start">Ano Comenzio</label>
                                           <input name="ano-start" class="form-control" type="text" placeholder="Ahora" />
                                       </div>
-                                      <div class="col-12 col-md-6">
+                                      <div class="col-sm-12 col-md-6">
                                           <label for="an-end">Ano Finale</label>
                                           <input name="ano-end" class="form-control" type="text"
                                                placeholder="Principio de los tiempos" />
