Fixed whitespace character.

--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -31,8 +31,7 @@
                                       </div>
                                       <div class="col-sm-12 col-md-6">
                                           <label for="an-end">Ano Finale</label>
-                                          <input name="ano-end" class="form-control" type="text"
-                                               placeholder="Principio de los tiempos" />
+                                          <input name="ano-end" class="form-control" type="text" placeholder="Principio de los tiempos" />
                                       </div>
                                   </div>
                               </div>
