--- a/templates/serie.html
+++ b/templates/serie.html
@@ -6,7 +6,7 @@
         <h2>Serie</h2>
         <hr>
         <div>
-            <h4>Título<</h4>
+            <h4>Título</h4>
             <h3 class="indented">
                 {{ serie.nom_serie }}
             </h3> 
