--- a/templates/register.html
+++ b/templates/register.html
@@ -2,24 +2,30 @@
 
 {% block body %}
   <h1>Register</h1>
+    <br>
+    <br>
+    <div class="center-block" style="width:70%;">
   {% from "includes/_formhelpers.html" import render_field %}
-  <form method='POST' action="">
-    <div class="form-group">
-      {{render_field(form.name, class ="form-control")}} 
-    </div>
-    <div class="form-group">
-      {{render_field(form.email, class ="form-control")}} 
-    </div>
-    <div class="form-group">
-      {{render_field(form.username, class ="form-control")}} 
-    </div>
-    <div class="form-group">
-      {{render_field(form.password, class ="form-control")}} 
-    </div>
-    <div class="form-group">
-      {{render_field(form.confirm, class ="form-control")}} 
-    </div>
-    <p><input type="submit" class="btn btn-primary" value="submit"></p>
-  </form>
-
+      <form method='POST' action="">
+        <div class="form-group">
+          {{render_field(form.email, class ="form-control")}}
+        </div>
+        <div class="form-group">
+          {{render_field(form.username, class ="form-control")}}
+        </div>
+        <div class="form-group">
+          {{render_field(form.password, class ="form-control")}}
+        </div>
+        <div class="form-group">
+          {{render_field(form.confirm, class ="form-control")}}
+        </div>
+          <div class="form-group">
+          {{render_field(form.name, class ="form-control")}}
+        </div>
+          <div class="form-group">
+          {{render_field(form.place_of_birth, class ="form-control")}}
+        </div>
+        <p><input type="submit" class="btn btn-primary" value="submit"></p>
+      </form>
+  </div>
 {% endblock %}
