--- a/templates/register.html
+++ b/templates/register.html
@@ -20,10 +20,10 @@
           {{render_field(form.confirm, class ="form-control")}}
         </div>
           <div class="form-group">
-          {{render_field(form.name, class ="form-control")}}
+          {{render_field(form.firstName, class ="form-control")}}
         </div>
           <div class="form-group">
-          {{render_field(form.place_of_birth, class ="form-control")}}
+          {{render_field(form.lastName, class ="form-control")}}
         </div>
         <p><input type="submit" class="btn btn-primary" value="submit"></p>
       </form>
