--- a/templates/register.html
+++ b/templates/register.html
@@ -1,31 +1,98 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Register</h1>
+  <h1>Registro</h1>
     <br>
     <br>
-    <div class="center-block" style="width:70%;">
   {% from "includes/_formhelpers.html" import render_field %}
       <form method='POST' action="">
-        <div class="form-group">
-          {{render_field(form.email, class ="form-control")}}
+        <div class="center-block" style="width: 70%">
+            <div class="form-group">
+                {% for opt in form.userType %}
+                    <div style="display: inline-block;">{{ opt }} &nbsp;</div>
+                    <div style="display: inline-block;">{{ opt.label }} &nbsp;</div>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+              {{render_field(form.email, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.username, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.password, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.confirm, class ="form-control")}}
+            </div>
+            <br>
+            <hr>
         </div>
-        <div class="form-group">
-          {{render_field(form.username, class ="form-control")}}
+        <br>
+        <h2>Informacion Opcional</h2>
+        <br>
+        <div class="center-block" style="width: 70%">
+            <div class="row">
+                <div class="form-group col-sm-4">
+                  {{render_field(form.firstName, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-4">
+                  {{render_field(form.lastName, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-4">
+                  {{render_field(form.pseudonym, class ="form-control")}}
+                </div>
+            </div>
+            <div class="form-group">
+              {{render_field(form.website, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.address, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.telephone, class ="form-control")}}
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-6">
+                {{render_field(form.dob, class ="form-control")}}
+                </div>
+                 <div class="form-group col-sm-6">
+                {{render_field(form.gender, class ="form-control")}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-4">
+                  {{render_field(form.city, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-4">
+                  {{render_field(form.state, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-4">
+                  {{render_field(form.country, class ="form-control")}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-6">
+                  {{render_field(form.member, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-6">
+                  {{render_field(form.title, class ="form-control")}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-6">
+                  {{render_field(form.dadName, class ="form-control")}}
+                </div>
+                <div class="form-group col-sm-6">
+                  {{render_field(form.momName, class ="form-control")}}
+                </div>
+            </div>
+            <div class="form-group">
+              {{render_field(form.comment, class ="form-control")}}
+            </div>
+            <p>
+            <input type="submit" class="btn btn-primary" value="submit"></p>
         </div>
-        <div class="form-group">
-          {{render_field(form.password, class ="form-control")}}
-        </div>
-        <div class="form-group">
-          {{render_field(form.confirm, class ="form-control")}}
-        </div>
-          <div class="form-group">
-          {{render_field(form.firstName, class ="form-control")}}
-        </div>
-          <div class="form-group">
-          {{render_field(form.lastName, class ="form-control")}}
-        </div>
-        <p><input type="submit" class="btn btn-primary" value="submit"></p>
       </form>
   </div>
 {% endblock %}
