Refactoring schema, and directories. Adding registration.

--- a/project/templates/main/search.html
+++ b/project/templates/main/search.html
@@ -1,4 +1,4 @@
-{% extends 'searchlayout.html' %}
+{% extends 'main/searchlayout.html' %}
 {% import 'queryMacros.html' as query %}
 {% block resultbody %}
 
