--- a/project/templates/includes/_navbar.html
+++ b/project/templates/includes/_navbar.html
@@ -15,13 +15,16 @@
             <li><a href="http://poeticasonora.mx/Proyecto">Sobre el proyecto</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-              {% if session.logged_in %}
-                  <li><a href="/dashboard">Dashboard</a></li>
-                  <li><a href="/logout">Logout</a></li>
-              {% else %}
-                  <li><a href="/register">Registro</a></li>
-                  <li><a href="/login">Iniciar</a></li>
-              {% endif %}
+            {% if current_user.confirmed and current_user.is_authenticated %}
+                <li><a href="{{ url_for('user.profile') }}">Profile</a></li>
+                <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
+            {% elif current_user.is_authenticated %}
+                <li><a href="{{ url_for('user.unconfirmed') }}">Confirm</a></li>
+                <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ url_for('user.register') }}">Registro</a></li>
+                <li><a href="{{ url_for('user.login') }}">Iniciar</a></li>
+            {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
