--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -33,21 +33,49 @@
         <link href="{{ url_for('static', filename='css/stylesheet.css') }}" id="member_stylesheet" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/global.css') }}" id="" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/searchbar.css') }}" id="" rel="stylesheet" type="text/css" />
+        {% block css %}{% endblock %}
     </head>
-
-
-
     <body data-bodyview="index" class="default">
-      {% include 'includes/_navbar.html' %}
-      <div class="container center-block" style="width: 80%;">
-        {% block body %}{% endblock %}
 
 
-        <directlink link="http://poeticasonora.mx/PS-Inicio" id="dl_145850"></directlink>
-        <div data-subpage-overlay class="subpage_overlay"></div>
-        <div data-content-ruler class="content_width"></div>
+        {% include 'includes/_navbar.html' %}
+
+        <div class="container center-block" style="width: 80%;">
+
+            <!-- messages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              <div class="row">
+                <div class="col-md-12">
+                  {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">
+                    <a class="close" title="Close" href="#" data-dismiss="alert">&times;</a>
+                   {{message}}
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endif %}
+            {% endwith %}
+
+            <!-- child template -->
+            {% block body %}{% endblock %}
+
+            <!-- errors -->
+            {% if error %}
+                <p class="error"><strong>Error:</strong> {{ error }}</p>
+            {% endif %}
+
+
+            <directlink link="http://poeticasonora.mx/PS-Inicio" id="dl_145850"></directlink>
+            <div data-subpage-overlay class="subpage_overlay"></div>
+            <div data-content-ruler class="content_width"></div>
+
+        </div>
+
+        <!-- scripts -->
         <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
         <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      </div>
+        {% block js %}{% endblock %}
     </body>
 </html>
