--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -33,6 +33,7 @@
         <link href="{{ url_for('static', filename='css/stylesheet.css') }}" id="member_stylesheet" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/global.css') }}" id="" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/searchbar.css') }}" id="" rel="stylesheet" type="text/css" />
+        <link href="{{ url_for('static', filename='css/dynamic-form.css') }}" id="" rel="stylesheet" type="text/css" />
         {% block css %}{% endblock %}
     </head>
     <body data-bodyview="index" class="default">
@@ -76,6 +77,9 @@
         <!-- scripts -->
         <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
         <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="{{ url_for('static', filename='js/form-toggle.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/tab-url.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/dynamic-forms.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
