--- a/project/templates/main/colectivo.html
+++ b/project/templates/main/colectivo.html
@@ -1,4 +1,4 @@
-{% extends 'main/searchlayout.html' %}
+{% extends 'searchlayout.html' %}
 {% import 'queryMacros.html' as query %}
 
 {% block resultbody %}
