--- a/project/templates/main/search.html
+++ b/project/templates/main/search.html
@@ -1,8 +1,8 @@
-{% extends 'main/searchlayout.html' %}
+{% extends 'searchlayout.html' %}
 {% import 'queryMacros.html' as query %}
 {% block resultbody %}
 
-   <div class="center-block" style="width: 80%;">
+   <div class="center-block skinny">
        {{ query.artista(result) }}
        {{ query.colectivo(result) }}
        {{ query.composicion(result) }}
