--- a/project/templates/main/serie.html
+++ b/project/templates/main/serie.html
@@ -1,4 +1,4 @@
-{% extends 'main/searchlayout.html' %}
+{% extends 'searchlayout.html' %}
 {% import 'queryMacros.html' as query %}
 
 {% block resultbody %}
@@ -16,7 +16,7 @@
             <h4>Origen</h4>
             <h3 class="indented">
                 {{ query.lugar(serie) }}
-            </h3>
+            </h3>FG
         </div>
         <br>
         <div>
