--- a/project/templates/user/profile.html
+++ b/project/templates/user/profile.html
@@ -1,40 +1,185 @@
-{% extends "layout.html" %}
+{% extends "searchlayout.html" %}
 
-{% block content %}
+{% block resultbody %}
 
-<h1>Your Profile</h1>
-<br>
+{% from "includes/_formhelpers.html" import render_field %}
+{% from "queryMacros.html" import nom, lugar, fecha, render_profile %}
 
-{% if current_user.is_authenticated() %}
-  <p>Email: {{current_user.email}}</p>
-{% endif %}
+<div id="tabs" class="container" style="width: 80%;">
 
-<h2>Change Password</h2>
-<br>
-<form class="form-reset" role="form" method="post" action="">
-  {{ form.csrf_token }}
-  <p>
-    {{ form.password(placeholder="password") }}
-    <span class="error">
-      {% if form.password.errors %}
-        {% for error in form.password.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.confirm(placeholder="confirm") }}
-    <span class="error">
-      {% if form.confirm.errors %}
-        {% for error in form.confirm.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <button class="btn btn-success" type="submit">Update</button>
-</form>
+    <h2>Bienvenido {{ user.nom_usario }}</h2>
+    <br>
+    <h3>Tu perfil</h3>
+    <p>Algo que explica lo que está pasando</p>
+    <br>
 
+    <ul class="nav nav-tabs nav-justified">
+        <li class="active"><a data-toggle="tab" href="#home">Inicio</a></li>
+        <li><a data-toggle="tab" href="#add-entity">Añadir una persona u organización</a></li>
+        <li><a data-toggle="tab" href="#add-track">Añadir una pista de audio</a></li>
+        <li><a data-toggle="tab" href="#change-pass">Cambia la contraseña</a></li>
+    </ul>
 
+    <div class="tab-content">
+
+        <div id="home" class="tab-pane fade in active">
+            <br>
+            <h2>Inicio</h2>
+            <br>
+            <span>Todos los detalles sobre este perfil;
+            </span>
+            <a class="right underline" href="{{ url_for('user.info') }}">Actualizar información</a>
+            <div class="center-block skinny">
+                <br>
+                <table class="table">
+                    <tbody>
+                        {% if session['is_person'] %}
+                         <tr><th scope="row">Nom: </th><td> {{ nom(user) }}</td></tr>
+                            {{ render_profile('Genéro: ', user.genero) }}
+                            {{ render_profile('Nombre del Padre: ', user.nom_paterno) }}
+                            {{ render_profile('Nombre del Madre: ', user.nom_materno) }}
+                        {% else %}
+                            {{ render_profile('Nom: ', user.nom_part) }}
+                        {% endif %}
+                            <tr><th scope="row">Origen: </th><td>{{ lugar(user) }}</td></tr>
+                            {{ render_profile('Email: ', user.email) }}
+                            {{ render_profile('Sitio Web: ', user.sitio_web) }}
+                            {{ render_profile('Telefono: ', user.telefono) }}
+                            {{ render_profile('Dirección: ', user.direccion) }}
+                            {{ render_profile('Fecha inicial: ', user.fecha_comienzo) }}
+                            {{ render_profile('Comentario Adicional: ', user.coment_participante) }}
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+
+        <div id="add-track" class="tab-pane fade">
+            <br>
+            <h2>Añadir una pista de audio</h2>
+            <br>
+            <p>Por favor, agregue información adicional sobre este trabajo.</p>
+            <form id="add-entity-form" method='POST' action="">
+                {{ track_form.csrf_token }}
+                <br>
+                <div class="center-block skinny">
+                    <h3>Sobre la composicion</h3>
+                    <div class="form-group" id="references">
+                        <div style="display: inline-block;">{{ track_form.references }} &nbsp;</div>
+                        <div style="display: inline-block;">{{ track_form.references.label }} &nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-4">
+                          {{render_field(track_form.title, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-4">
+                          {{render_field(track_form.alt_title, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-4">
+                          {{render_field(track_form.date_published, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.comp_city, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.comp_subdiv, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.comp_subdiv_type, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.comp_country, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      {{render_field(track_form.text, class ="form-control")}}
+                    </div>
+                    <br>
+                    <hr>
+                    <br>
+                    <h3>Sobre la interpretación</h3>
+                    <div class="row">
+                        <div class="form-group col-sm-3">
+                            {{render_field(track_form.track_no, class ="form-control")}}
+                        </div>
+                         <div class="form-group col-sm-3">
+                            {{render_field(track_form.medio, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-sm-3">
+                            {{render_field(track_form.date_recorded, class ="form-control")}}
+                        </div>
+                         <div class="form-group col-sm-3">
+                            {{render_field(track_form.date_digitized, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.interp_city, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.interp_subdiv, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.interp_subdiv_type, class ="form-control")}}
+                        </div>
+                        <div class="form-group col-md-3">
+                          {{render_field(track_form.interp_country, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      {{render_field(track_form.audio_file, class ="form-control")}}
+                    </div>
+                    <div class="form-group">
+                      {{render_field(track_form.comments, class ="form-control")}}
+                    </div>
+                    <br>
+                     <div class="row">
+                         <input type="hidden" style="display: none;" name="track_form">
+                        <button class="btn btn-success" type="submit">Actualizar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div id="add-entity" class="tab-pane fade">
+            <br>
+            <h2>Añadir una persona u organización</h2>
+            <br>
+            <p>Por favor, rellene el siguiente formulario.</p>
+
+        </div>
+
+        <div id="change-pass" class="tab-pane fade">
+            <br>
+            <h2>Cambia la contraseña</h2>
+            <br>
+            <div class="center-block skinny">
+                <form class="form-reset" role="form" method="post" action="">
+                  {{ password_form.csrf_token }}
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                              {{render_field(password_form.old_password, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                              {{render_field(password_form.new_password, class ="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                              {{render_field(password_form.confirm, class ="form-control")}}
+                        </div>
+                    </div>
+                    <input type="hidden" style="display: none;" name="password_form">
+                  <button class="btn btn-success" type="submit">Actualizar</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 {% endblock %}
