--- a/project/templates/user/unconfirmed.html
+++ b/project/templates/user/unconfirmed.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block body %}
 
-<h1>Welcome!</h1>
+<h1>Bienvenido!</h1>
 <br>
-<p>You have not confirmed your account. Please check your inbox (and your spam folder) - you should have received an email with a confirmation link.</p>
-<p>Didn't get the email? <a href="{{ url_for('user.resend_confirmation') }}">Resend</a>.</p>
+<p>No ha confirmado su cuenta. Comprueba tu bandeja de entrada (y tu carpeta de correo no deseado). Deberías haber recibido un correo electrónico con un enlace de confirmación.</p>
+<p>¿No recibiste el correo electrónico? <a class="underline" href="{{ url_for('user.resend_confirmation') }}">Reenviar</a>.</p>
 
 {% endblock %}
